<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/content_back"
    android:orientation="vertical"
    tools:context="com.android.silence.liccaitong.activity.ShowOutAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#596359"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#596359"
            android:contentDescription="@string/img_back_desp"
            android:gravity="center"
            android:onClick="back"
            android:src="@drawable/title_back_style"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/expense_info"
            android:textColor="#ffffcc00"
            android:textSize="25sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:weightSum="20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/subject"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/money"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/place"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            />
    </LinearLayout>


    <ListView
        android:id="@+id/out_ac_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/text_sum_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        />
</LinearLayout>
