<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/content_back"
    android:orientation="vertical"
    tools:context="com.android.silence.licaitong.activity.SendFeedback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#596359"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="#596359"
            android:contentDescription="@string/img_back_desp"
            android:gravity="center"
            android:onClick="back"
            android:src="@drawable/title_back_style"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="#ffffcc00"
            android:textSize="25sp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_feedback"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine"
        android:textColor="#ffffff"
        >

        <requestFocus/>
    </EditText>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_orange_style"
        android:onClick="sendClick"
        android:text="@string/btn_send"
        android:textSize="18sp"/>

</LinearLayout>
